--- a/qdrant-landing/themes/qdrant/layouts/documentation/baseof.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation/baseof.html
@@ -16,6 +16,7 @@
 {{- partial "footer.html" . -}}
 
 <script>
+  // separate file
   $(document).ready(() => {
      const selector = new URLSearchParams(window.location.search).get('selector');
      if (selector) {
