--- a/qdrant-landing/themes/qdrant/layouts/partials/search.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/search.html
@@ -1,30 +1,30 @@
 <!-- Modal -->
-<div class="modal fade search" id="searchModal" data-keyboard="true" tabindex="-1"
+<div class="modal fade qdr-search" id="searchModal" data-keyboard="true" tabindex="-1"
      aria-labelledby="searchModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-scrollable modal-lg">
+    <div class="modal-dialog modal-dialog-scrollable modal-lg qdr-search__dialog">
         <div class="modal-content">
 
-            <div class="modal-header search__header">
+            <div class="modal-header qdr-search__header">
                 <div class="modal-title input-group">
                     <div class="input-group-append">
-                        <span class="input-group-text search__icon" id="basic-addon2">
+                        <span class="input-group-text qdr-search__icon" id="basic-addon2">
                             <i class="fa fa-search"></i>
                         </span>
                     </div>
-                    <input type="text" class="form-control search__input" placeholder="Search..."
+                    <input type="text" class="form-control qdr-search__input" placeholder="Search..."
                            id="searchInput" aria-label="Search">
                 </div>
 
-                <button type="button" class="close search__close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close qdr-search__close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
 
-            <div class="modal-body search__results"></div>
+            <div class="modal-body qdr-search__results"></div>
 
-            <div class="modal-footer search__footer">
+            <div class="modal-footer qdr-search__footer">
                 Powered by
-                <figure><img class="search__logo" class="" src="/images/logo_with_text.svg" alt="Qdrant logo"></figure>
+                <figure><img class="qdr-search__logo" class="" src="/images/logo_with_text.svg" alt="Qdrant logo"></figure>
             </div>
         </div>
     </div>
