--- a/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
@@ -1,7 +1,7 @@
 {{$currentNode := .}}
 <nav class="col-lg-3 col-md-3 col-12 mt-4 position-relative">
     <!-- Button trigger modal -->
-    <button type="button" class="search-input-btn" data-toggle="modal" data-target="#searchModal">
+    <button type="button" class="qdr-search-input-btn" data-toggle="modal" data-target="#searchModal">
         <i class="fa fa-search mr-3"></i> Search...
     </button>
     {{ partial "search" . }}
