--- a/qdrant-landing/themes/qdrant/static/css/blocks/features-section.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/features-section.scss
@@ -92,7 +92,7 @@
     .text {
       margin-bottom: 0;
       position: relative;
-      color: var(--brand-gray);
+      color: var(--brand-dark-gray);
       font-size: 18px;
       line-height: 1.7em;
 
