--- a/qdrant-landing/themes/qdrant/static/css/blocks/hero-code.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/hero-code.scss
@@ -9,7 +9,7 @@
   padding: 1.6rem 1rem;
   position: relative;
   border-radius: 5px;
-  background: var(--brand-light-grey);
+  background: var(--brand-mid-grey);
   font-family: "SF Mono", "Anonymous Pro", monospace;
   font-size: 18px;
 
