--- a/qdrant-landing/themes/qdrant/static/css/blocks/button.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/button.scss
@@ -13,7 +13,8 @@
     @include media-breakpoint-down(md) {
       width: calc(100% - 20px);
       margin: 10px 10px 5px;
-    };
+    }
+  ;
 
     &:before {
       width: 100%;
@@ -426,9 +427,9 @@
   border-radius: 50px;
   background: none;
   font-family: 'Roboto Condensed', serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 30px;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 38px;
   overflow: hidden;
 
   &:before {
@@ -473,6 +474,5 @@
     color: #ffffff;
     border-color: var(--brand-primary);
   }
-
 
 }
