--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -272,16 +272,16 @@ docker run -p 6333:6333 qdrant/qdrant</code>
           <div class="text">We will update you on new features and news regarding Qdrant
           </div>
         </div>
-        <div class="content-column offset-lg-3 col-lg-6 col-md-12 col-sm-12">
+        <div class="content-column col-12">
           <!-- Newsletter Form -->
           <div class="newsletter-form">
             <form action="{{ .Site.Params.mailchimp_subscribe }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <div class="form-group">
+              <div class="d-flex justify-content-between">
                 <input type="email" name="EMAIL" value="" placeholder="Enter Your Email" required="" id="mce-EMAIL">
                 <div style="position: absolute; left: -5000px;" aria-hidden="true">
                   <input type="text" name="{{ .Site.Params.mailchimp_subscribe_id }}" tabindex="-1" value="">
                 </div>
-                <button type="submit" class="theme-btn btn-style-three"><span class="txt">Subscribe</span>
+                <button type="submit" class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big btn-style-four_responsive"><span class="txt">Subscribe</span>
                 </button>
               </div>
             </form>
