--- a/qdrant-landing/themes/qdrant/static/css/blocks/button.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/button.scss
@@ -407,11 +407,11 @@
   }
 
   &_responsive {
-    width: 100%;
-    text-align: center;
+    width: inherit;
 
-    @include media-breakpoint-up(sm) {
-      width: inherit;
+    @include media-breakpoint-down(md) {
+      width: 100%;
+      text-align: center;
     }
   }
 }
