--- a/qdrant-landing/themes/qdrant/static/css/blocks/footer.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/footer.scss
@@ -7,7 +7,7 @@
 ***/
 .main-footer {
   position: relative;
-  background-color: var(--brand-primary);
+  background-color: var(--brand-secondary);
   overflow: hidden;
 
   &__widget {
