--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -142,7 +142,7 @@
                                <a class="btn btn_in-header" href="/surveys/cloud-request/" title="Cloud" role="button">
                                    <span class="btn__text"><i class="fas fa-cloud"></i> Cloud</span></a>
                                <a class="btn btn_in-header" href="{{ .Site.Params.github }}" target="_blank" title="GitHub" role="button">
-                                   <span class="btn btn__text"><i class="fab fa-github"></i> Github</span></a>
+                                   <span class="btn__text"><i class="fab fa-github"></i> Github</span></a>
                            </li>
 
                           </ul>
