--- a/qdrant-landing/themes/qdrant/layouts/surveys/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/surveys/single.html
@@ -1,7 +1,20 @@
 {{ partial "header" . }}
 <style>
   .main-header {
-    background-image: url(/images/background/2.png);
+    background: var(--brand-secondary);
+  }
+  .main-header .main-menu .navigation__item a.navigation__link {
+    color: white;
+  }
+  .main-header .main-menu .btn.btn_in-header {
+    box-shadow: inset 0 0 0 1px white !important;
+  }
+  .main-header .main-menu .btn.btn_in-header:hover {
+    box-shadow: inset 0 0 0 1px white !important;
+  }
+
+  .main-header .main-menu .btn.btn_in-header:before {
+    box-shadow: inset 0 0 0 1px var(--brand-primary) !important;
   }
 </style>
 
