--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -192,7 +192,7 @@ docker run -p 6333:6333 qdrant/qdrant</code>
 
   {{ with (.Site.GetPage "section" "stack") }}
   <!--Clients Section-->
-<section class="clients-section my-5">
+<section class="clients-section">
   <div class="auto-container">
     <div class="row">
       <div class="col-12 sec-title">
@@ -264,7 +264,7 @@ docker run -p 6333:6333 qdrant/qdrant</code>
   {{ end }}
 
   <!-- Contact Form Section -->
-  <section class="clients-section my-5">
+  <section class="clients-section contact-section">
     <div class="auto-container">
       <div class="row">
         <div class="col-12 sec-title">
