--- a/qdrant-landing/themes/qdrant/static/css/blocks/features-section.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/features-section.scss
@@ -7,10 +7,10 @@
 ***/
 
 .features-section {
-  padding: 0 0 60px;
+  padding: 0 0 46px;
   position: relative;
   @include media-breakpoint-up(lg) {
-    padding: 177px 0 60px;
+    padding: 129px 0 46px;
   }
 
   .image-column {
@@ -53,7 +53,7 @@
 
 .feature-block {
   width: auto;
-  margin-bottom: 80px;
+  margin-bottom: 64px;
   position: relative;
 
   @include media-breakpoint-up(lg) {
@@ -71,7 +71,8 @@
     position: relative;
 
     .icon-box {
-      margin-bottom: 20px;
+      height: 51px;
+      margin-bottom: 16px;
       position: relative;
       color: var(--brand-primary);
       font-size: 48px;
@@ -79,7 +80,7 @@
     }
 
     h5 {
-      margin-bottom: 10px;
+      margin-bottom: 4px;
       position: relative;
       font-weight: 700;
       line-height: 1.4em;
