--- a/qdrant-landing/themes/qdrant/static/css/blocks/features-section.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/features-section.scss
@@ -7,7 +7,7 @@
 ***/
 
 .features-section {
-  padding: 0 0 46px;
+  padding: 40px 0 46px;
   position: relative;
   @include media-breakpoint-up(lg) {
     padding: 129px 0 46px;
