--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -199,20 +199,16 @@ docker run -p 6333:6333 qdrant/qdrant</code>
         <h2>{{ .Title | safeHTML }}</h2>
         <div class="text">{{ .Params.subtitle}}</div>
       </div>
-      <div class="auto-container">
-        <div class="sponsors-outer">
-          <!--Sponsors Carousel-->
-          <ul class="row clearfix">
-            {{ range $i, $e := first 3 .Pages }}
-            <li class="col d-flex align-self-center justify-content-center m-3">
-              <figure class="image-box"><a href="{{ .Params.origin_url }}"><img src="{{ .Params.image }}" alt=""></a></figure>
-            </li>
-            {{ end }}
-          </ul>
-        </div>
-
-      </div>
     </div>
+
+    <ul class="sponsors-outer">
+      {{ range $i, $e := first 3 .Pages }}
+      <li class="mt-3 mb-3 image-box">
+        <a href="{{ .Params.origin_url }}"><img src="{{ .Params.image }}-mono.png" alt=""></a>
+      </li>
+      {{ end }}
+    </ul>
+
   </div>
 </section>
   <!--End Clients Section-->
